[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Zakura contributors"]
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zakura-core/zakura-vct-sprout-history"

[workspace.lints.rust]
unsafe_code = "forbid"
