[package]
name = "zakura-vct-sprout-history-part-02"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Part 02 of Zakura's canonical Mainnet VCT Sprout-history artifact"
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/lib.rs", "src/part.bin"]

[lints]
workspace = true
